--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -52,7 +52,7 @@
                 android:background="@null"
                 android:fontFamily="@font/suit_r"
                 android:gravity="center"
-                android:hint="@string/item_name_input_text"
+                android:hint="@string/item_name_hint"
                 android:inputType="text"
                 android:onTextChanged="@{viewModel::onItemNameTextChanged}"
                 android:text="@{viewModel.itemName}"
@@ -69,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:fontFamily="@font/montserrat_b"
-                android:hint="@string/price_input_text"
+                android:hint="@string/price_hint"
                 android:layout_marginTop="@dimen/spacingMicro"
                 android:inputType="number"
                 android:text="@{viewModel.itemPrice}"
@@ -133,7 +133,7 @@
                 android:layout_height="50dp"
                 android:layout_marginHorizontal="@dimen/spacingBase"
                 android:layout_marginTop="@dimen/spacing10"
-                android:hint="@string/wish_list_registration_memo_hint"
+                android:hint="@string/memo_short_hint"
                 android:inputType="text"
                 android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
                 android:textSize="@dimen/typographyBase"
@@ -146,10 +146,10 @@
                 android:layout_marginHorizontal="@dimen/spacingBase"
                 android:layout_marginTop="@dimen/spacingBase"
                 android:enabled="@{viewModel.itemName.length() > 0 ? true : false}"
-                android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.wish_list_registration)}"
+                android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.wish_list_registration_button_text)}"
                 android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
                 app:layout_constraintTop_toBottomOf="@id/item_memo"
-                tools:text="@string/wish_list_registration" />
+                tools:text="@string/wish_list_registration_button_text" />
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/loading_lottie"
@@ -314,7 +314,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/spacingBase"
                 android:fontFamily="@font/suit_r"
-                android:text="@string/item_registration_noti_setting_guide_text"
+                android:text="@string/item_registration_noti_setting_guide"
                 android:textColor="@color/gray_300"
                 android:textSize="@dimen/typographyBaseDetail"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -330,7 +330,7 @@
             android:fontFamily="@font/suit_r"
             android:paddingHorizontal="@dimen/typographyDescription"
             android:paddingVertical="@dimen/spacing20"
-            android:text="@string/check_network_connection_detail"
+            android:text="@string/check_network_connection_snackbar_text"
             android:textColor="@color/white"
             android:textSize="@dimen/typographyBase"
             app:layout_constraintBottom_toBottomOf="parent"
