--- a/app/src/main/res/layout/dialog_new_folder_add.xml
+++ b/app/src/main/res/layout/dialog_new_folder_add.xml
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing20"
                 android:layout_marginEnd="@dimen/spacing12"
-                android:hint="@string/folder_add_dialog_detail"
+                android:hint="@string/folder_name"
                 android:maxLength="10"
                 android:onTextChanged="@{viewModel::onFolderNameTextChanged}"
                 android:text="@{viewModel.folderName}"
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing5"
-                android:text="@string/folder_name_already_exist_toast_text"
+                android:text="@string/folder_upload_name_already_exist_detail"
                 android:textAppearance="@style/Widget.TextAppearance.Detail"
                 android:visibility="@{viewModel.isExistFolderName == true ? View.VISIBLE : View.INVISIBLE}"
                 app:layout_constraintStart_toStartOf="@id/folder_name"
