--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -82,7 +82,7 @@
             android:fontFamily="@font/suit_r"
             android:gravity="center"
             android:lineSpacingExtra="@dimen/spacingMicro"
-            android:text="@string/sign_up_password_guide_text"
+            android:text="@string/sign_up_password_guide"
             android:textColor="@color/gray_700"
             android:textSize="@dimen/typographyDescription"
             app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
                 style="@style/Widget.EditText.Basic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/password_input_text"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
                 android:paddingVertical="@dimen/spacing12"
@@ -116,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/spacingBase"
                 android:layout_marginTop="@dimen/spacing5"
-                android:text="@string/sign_password_detail_text"
+                android:text="@string/sign_password_detail"
                 android:textAppearance="@style/Widget.TextAppearance.Detail"
                 android:visibility="@{viewModel.registrationPassword.length() > 0 &amp;&amp; viewModel.validPasswordFormat == false ? View.VISIBLE : View.GONE}" />
 
@@ -129,10 +129,10 @@
             android:layout_marginBottom="@dimen/spacingBase"
             android:enabled="@{viewModel.validPasswordFormat == true}"
             android:onClick="@{() -> viewModel.signUp()}"
-            android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.sign_up_complete)}"
+            android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.sign_up)}"
             android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:text="@string/sign_up_complete"/>
+            tools:text="@string/sign_up"/>
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading_lottie"
