--- a/app/src/main/res/layout/fragment_wish.xml
+++ b/app/src/main/res/layout/fragment_wish.xml
@@ -282,7 +282,7 @@
                         style="@style/Widget.EditText.Input"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:hint="@string/shop_link_input_text"
+                        android:hint="@string/shop_link_hint"
                         android:inputType="textUri"
                         android:onTextChanged="@{viewModel::onItemUrlTextChanged}"
                         android:text="@{viewModel.itemUrl}"
@@ -304,7 +304,7 @@
                         style="@style/Widget.EditText.Input"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:hint="@string/memo_input_text"
+                        android:hint="@string/memo_hint"
                         android:inputType="textMultiLine"
                         android:onTextChanged="@{viewModel::onItemMemoTextChanged}"
                         android:text="@{viewModel.itemMemo}"
